cmake_minimum_required(VERSION 3.22)
project(Essential_CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Essential_CPP
        chapter1/1_01.cpp
        chapter2/2_01.cpp
        chapter2/2_02.cpp
        chapter2/2_03.cpp
        chapter2/2_04.cpp
        chapter2/2_05.cpp
        chapter2/2_06.cpp
        demo.c)
